--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,9 @@ h6 {
 .sub-header {
   @apply text-4xl md:text-6xl lg:text-7xl text-center py-4;
 }
+.image-header {
+  @apply text-3xl md:text-4xl lg:text-5xl text-center py-4;
+}
 
 /* Input */
 .input {
